--- a/dashboarduidesign.html
+++ b/dashboarduidesign.html
@@ -79,16 +79,16 @@
 <div class="flex items-center justify-center size-9 rounded-xl bg-gradient-to-br from-primary to-[#2a4f50] text-white shadow-lg shadow-primary/20">
 <span class="material-symbols-outlined text-[20px]">bubble_chart</span>
 </div>
-<h1 class="text-lg font-bold tracking-tight text-white">JobTracker AI</h1>
+<h1 class="text-lg font-bold tracking-tight text-slate-900 dark:text-white">JobTracker AI</h1>
 </div>
 <div class="flex items-center gap-4">
 <!-- Theme Toggle -->
-<button class="flex items-center justify-center size-9 rounded-full text-slate-400 hover:text-white transition-colors glass-btn">
+<button class="flex items-center justify-center size-9 rounded-full text-slate-600 dark:text-slate-400 hover:text-slate-900 dark:hover:text-white transition-colors glass-btn">
 <span class="material-symbols-outlined text-[20px]">dark_mode</span>
 </button>
 <div class="h-6 w-px bg-white/10 mx-1"></div>
 <!-- Logout (Ghost Style) -->
-<button class="flex items-center gap-2 px-4 py-2 rounded-xl text-sm font-medium text-slate-300 hover:text-white transition-all hover:bg-white/5 border border-transparent hover:border-white/10">
+<button class="flex items-center gap-2 px-4 py-2 rounded-xl text-sm font-medium text-slate-600 dark:text-slate-300 hover:text-slate-900 dark:hover:text-white transition-all hover:bg-slate-100 dark:hover:bg-white/5 border border-transparent hover:border-slate-200 dark:hover:border-white/10">
 <span>Logout</span>
 <span class="material-symbols-outlined text-[18px]">logout</span>
 </button>
@@ -116,7 +116,7 @@
 <!-- Main Stats Display -->
 <div class="py-4 relative z-10">
 <div class="flex items-end gap-2 mb-1">
-<span class="text-5xl font-bold text-white tracking-tight">12</span>
+<span class="text-5xl font-bold text-slate-900 dark:text-white tracking-tight">12</span>
 <span class="text-lg text-emerald-400 font-medium mb-1.5">+3 today</span>
 </div>
 <p class="text-slate-400 text-sm">Applications detected this week</p>
@@ -132,7 +132,7 @@
 <span>Open Google Sheet</span>
 <span class="material-symbols-outlined text-[16px] transition-transform group-hover/link:translate-x-0.5">arrow_forward</span>
 </a>
-<span class="text-xs text-slate-500 font-mono">Synced: 2m ago</span>
+<span class="text-xs text-slate-600 dark:text-slate-400 font-mono">Synced: 2m ago</span>
 </div>
 </div>
 </div>
@@ -176,12 +176,12 @@
 <div class="mt-auto pt-2 relative z-10 border-t border-white/5">
 <div class="flex items-center justify-between mt-4">
 <div class="flex flex-col">
-<span class="text-xs text-slate-500 mb-0.5">Next run</span>
-<span class="text-sm font-mono text-white">14:00 PM</span>
+<span class="text-xs text-slate-600 dark:text-slate-400 mb-0.5">Next run</span>
+<span class="text-sm font-mono text-slate-900 dark:text-white">14:00 PM</span>
 </div>
 <div class="text-right flex flex-col">
-<span class="text-xs text-slate-500 mb-0.5">Last processed</span>
-<span class="text-sm font-mono text-white">13:00 PM</span>
+<span class="text-xs text-slate-600 dark:text-slate-400 mb-0.5">Last processed</span>
+<span class="text-sm font-mono text-slate-900 dark:text-white">13:00 PM</span>
 </div>
 </div>
 </div>
